# drift-study

./: .gitignore  .pre-commit-config.yaml  README.md  correct_metrics.py  launch.sh  pyproject.toml  requirements.txt  run_experiments.sh  setup.cfg  test_speed.py
config/: arxiv.yaml  default_logger_config.yaml  delays_all.yaml  delays_label.yaml  delays_none.yaml  delays_retraining.yaml  drift_config.yaml  drift_config_electricity.yaml  drift_config_flight.yaml  drift_config_lcld.yaml  electricity.yaml  electricity_prerun.yaml  electricity_rf_optimize.yaml  electricity_small.yaml  flight.yaml  flight_reg.yaml  huffpost.yaml  huffpost_pretrain.yaml  lcld.yaml  lcld_auto.yaml  lcld_complete.yaml  lcld_ds.yaml  lcld_freq_window_size.yaml  lcld_freq_window_size_pretrain.yaml  lcld_full.yaml  lcld_manual.yaml  lcld_manual_generate.yaml  lcld_nn.yaml  lcld_opt.yaml  lcld_periodic.yaml  lcld_periodic_generate.yaml  lcld_periodic_no_opt.yaml  lcld_periodic_no_opt_pretrain.yaml  lcld_periodic_opt_pretrain.yaml  lcld_periodic_pretrain.yaml  lcld_periodic_pretrain_generate.yaml  lcld_prerun.yaml  lcld_prerun_40.yaml  lcld_prerun_400.yaml  lcld_prerun_50.yaml  (+16 more)
config/auto/: delays_half.yaml  delays_none.yaml  delays_twice.yaml  delays_twice_electricity.yaml  electricity_rf_scaled.yaml  electricity_stg.yaml  electricity_stg_manual.yaml  electricity_tabnet.yaml  electricity_tabnet_manual.yaml  electricity_tabtransformer.yaml  electricity_torchrln.yaml  electricity_torchrln_dg.yaml  electricity_torchrln_dg_training.yaml  electricity_torchrln_manual.yaml  electricity_vime.yaml  electricity_vime_manual.yaml  lcld_201317_ds_time_stg.yaml  lcld_knn.yaml  (+10 more)
drift_study/: complete_run.py  confusion_matrix.py  detector_metrics.py  detector_metrics_absolute.py  detector_metrics_absolute_graph.py  detector_metrics_compare.py  detector_metrics_compare_graph.py  drift_detector_factory.py  drift_method_augmented.py  drift_methods.py  drift_methods_analysis.py  f1_per_period.py  generate_config.py  graph_metric_optimize.py  graph_metric_optimize_loss.py  graph_metric_optimize_plt.py  graph_metric_optimize_time.py  graph_metric_period.py  helpers.py  integral_performance.py  line_graph.py  merge_dates.py  optimize_simulator.py  plot_ml_ntrain.py  pretrain.py  run_simulator.py  start_evidently.py  table_periodic.py
jobs/: auto_do.sh  auto_do_nn.sh  data_bk.sh  launch-cpu.sh  test.sh  zip_package.sh  zip_staged.sh
notebooks/: 06_11_drift_correction.ipynb  correlation.py  generate_examples.py  latex_tables.py  metrics.py  run.sh  static_analysis.py  test_log.py  train_model.py
scripts/: complete_run.sh  complete_run_new.sh  complete_run_new_0.sh  launch.sh  lcld_complete copy.sh  lcld_complete.sh  lcld_complete_generate.sh  lcld_manual.sh  lcld_manual_generate.sh  lcld_manual_graph.sh  lcld_opt.sh  lcld_periodic.sh  lcld_periodic_generate.sh  lcld_periodic_pretrain.sh  lcld_periodic_table.sh  lcld_prerun.sh  lcld_pretrain.sh  lcld_rq1.1.sh  lcld_rq1.2.sh  lcld_rq1.3.sh  lcld_rq1.sh  line_graph.sh  optimize.sh  optimize_new.sh  optimizer_graph.sh  periodic.sh  periodic_pretrain.sh  zip.sh  zip2.sh  zip3.sh
(+119 files in other folders)
