[tool.poetry]
name = "drift-study"
version = "0.1.0"
description = ""
authors = ["Thibault Simonetto <thibault.simonetto.001@student.uni.lu>"]

[tool.poetry.dependencies]
python = "3.8.10"
scikit-learn = "^1.1.0"
tqdm = "^4.64.0"
h5py = "^3.6.0"
river = "^0.10.1"
evidently = "^0.1.50-alpha.0"
serval-config-utils = "^0.1.4"
serval-ml-commons = {path = "../mlc/", develop = true }
frouros = "^0.1.0"

tables = "^3.7.0"
menelaus = "^0.1.2"
torch = {version="~1.12.1", source="torchcu116"}
autoattack = { git = "https://github.com/fra31/auto-attack.git", rev = "6482e4d6fbeeb51ae9585c41b16d50d14576aadc" }
seaborn = "^0.12.1"
alibi-detect = {extras = ["torch"], version = "^0.10.4"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^3.0.0"
pre-commit = "^2.19.0"
flake8 = "^4.0.1"
mypy = "^0.950"
isort = "^5.10.1"
black = "^22.3.0"

[tool.poetry.group.dev.dependencies]
notebook = "^6.5.2"

[[tool.poetry.source]]
name = "torchcu116"
url = "https://download.pytorch.org/whl/cu116"
default = false
secondary = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 79

[tool.black]
line-length = 79
target-version = ['py38']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
